# ptrbench

./: CMakeLists.txt  README  config.h.in
benchmark/: benchmark.c  cast.c  fftw3.c  fftw3f.c  float-T.c  float.c  opencl-1alloc-B.c  opencl-1alloc.c  opencl-2alloc.c  test.cl
results/: float-3400G.txt  float-E5450.txt  float-Rpi2B.txt  float-amd2700U.txt  float-amd2700x.txt  float-amd7252.txt  float-i7-3517U.txt  float-opencl1-vega64.txt  float-opencl1B-vega64.txt  floatT16-amd2700x.txt  floatT16-amd7252-8xDDR4-3200.txt  floatT4-amd2700U-2xDDR-2666.txt  floatT8-amd2700U-2xDDR-2666.txt  floatT8-amd2700x.txt  floatT8-amd3400G-1xDDR4-3200.txt  floatT8-amd7252.txt
